fix(tds-dropdown): letter spacing

--- a/packages/core/src/components/dropdown/dropdown.scss
+++ b/packages/core/src/components/dropdown/dropdown.scss
@@ -97,7 +97,7 @@
 
       &.floated {
         font: var(--tds-detail-07);
-        letter-spacing: var(--tds-detail-05-ls);
+        letter-spacing: var(--tds-detail-07-ls);
 
         &.lg {
           top: 12px;
